--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
 
   Runs_the_Python_Program:
 
-    # runs-on: self-hosted
+    runs-on: self-hosted
 
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
 
     steps:
 
