--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
   Example_environment_variables:
 
     needs: Runs_the_Python_Program
-      runs-on: self-hosted
+      # runs-on: self-hosted
 
     # runs-on: ubuntu-latest
 
