--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: Python program
  
 on:
@@ -19,9 +18,9 @@ jobs:
 
         uses: actions/checkout@v2
  
-      - name: setup python
+      # - name: setup python
 
-        uses: actions/setup-python@v2
+      #   uses: actions/setup-python@v2
 
         # with:
 
@@ -31,25 +30,25 @@ jobs:
 
         run: python index.py
  
-  Example_environment_variables:
+  # Example_environment_variables:
 
-    needs: Runs_the_Python_Program
+  #   needs: Runs_the_Python_Program
     
 
-    # runs-on: ubuntu-latest
+  #   # runs-on: ubuntu-latest
 
-    if: ${{always()}}
+  #   if: ${{always()}}
 
-    env: 
+  #   env: 
 
-      First_name: "Hardik"
+  #     First_name: "Hardik"
 
-    runs-on: self-hosted
-    steps:
+  #   runs-on: self-hosted
+  #   steps:
 
-      - name: Accessing the environment variable
+  #     - name: Accessing the environment variable
 
-        run: echo ${{env.First_name}}
+  #       run: echo ${{env.First_name}}
  
   # secret_example:
 
