--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,24 +50,24 @@ jobs:
 
   #       run: echo ${{env.First_name}}
  
-  # secret_example:
+  secret_example:
 
-  #   needs: Example_environment_variables
+    needs: Example_environment_variables
 
-  #   runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-  #   steps:
+    steps:
 
-  #     - name: checkout code
+      - name: checkout code
 
-  #       uses: actions/checkout@v2
+        uses: actions/checkout@v2
  
-  #     - name: Use a secret variable
+      - name: Use a secret variable
 
-  #       env: 
+        env: 
 
-  #         SECRET_TOKEN: ${{secrets.MY_SECRET_NAME}}
+          SECRET_TOKEN: ${{secrets.MY_SECRET_NAME}}
 
-  #       run: |
+        run: |
 
-  #           echo "The secret token is $SECRET_TOKEN"
+            echo "The secret token is $SECRET_TOKEN"
