--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
 
         env: 
 
-          SECRET_TOKEN: ${{secrets.MY_SECRET_NAME}}
+          SECRET_TOKEN: ${{secrets.SENSTIVE_INFO}
 
         run: |
 
