--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
 
         env: 
 
-          SECRET_TOKEN: ${{secrets.SENSTIVE_INFO}
+          SECRET_TOKEN: ${{secrets.SENSTIVE_INFO}}
 
         run: |
 
